# habitui

./: .gitignore  README.md  main.py  pyproject.toml
src/habitui/: actions.py  custom_logger.py  main.py
src/habitui/config/: __init__.py  app_config.py  app_config_model.py
src/habitui/core/: __init__.py
src/habitui/core/client/: __init__.py  api_models.py  habitica_api.py  habitica_client.py  rate_limiter.py
src/habitui/core/client/mixin/: __init__.py  challenge_mixin.py  inbox_mixin.py  paginate_mixin.py  party_mixin.py  tag_mixin.py  task_mixin.py  user_mixin.py
src/habitui/core/models/: __init__.py  base_enums.py  base_model.py  challenge_model.py  content_model.py  creation_model.py  message_model.py  party_model.py  tag_model.py  task_model.py  task_processor.py  user_model.py  validators.py
src/habitui/core/repositories/: __init__.py  base_vault.py  challenge_vault.py  content_vault.py  party_vault.py  tag_vault.py  task_vault.py  user_vault.py
src/habitui/core/services/: __init__.py  data_vault.py  useful_data_vault.py
src/habitui/tui/: __init__.py  base_tab.py  habitui.css  habitui.tcss  loading_screen.py  main_app.py  main_screen.py  min_css.css  panel.py  panels.py  profile_tab.py  textual_log.py  textual_theme.py
src/habitui/tui/generic/: __init__.py  base_tab.py  confirm_modal.py  dashboard_panels.py  edit_modal.py
src/habitui/tui/main/: __init__.py  api_handler.py  progress_widget.py  rich_log.py  theming.py
src/habitui/tui/modals/: party_modal.py  tags_modal.py
src/habitui/tui/screens/: __init__.py  challenge_tab.py  grid.py  header.py  inbox_tab.py  main_screen.py  party_tab.py  profile_tab.py  tag_tab.py  task_tab.py
src/habitui/ui/: __init__.py  console.py  custom_logger.py  emoji_parser.py  icon_definitions.py  theme_manager.py  themed_icons.py  themes.json
src/habitui/utils/: __init__.py  datetime_handler.py  json_handler.py  keywords.json  md_to_rich.py  setup.py
