[project]
name = "example_package"
description = "example package"
version = "0.1.0"
authors = [
    { name = "Random Hacker", email = "no@dev.null" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [

]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "black",
]

#[build-system]
#build-backend = "flit_core.buildapi"
#requires = ["flit_core >=3.2,<4"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 150

[tool.ruff.lint]
select = ["ALL"]
ignore = ["RUF012", "COM812","D100", "D401","ANN401","BLE001", "FBT001", "FBT002", "PGH003",]


[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.validator",
    "declared_attr",
    "expression",
    "comparator",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
